--- a/apartments/templates/apartments/detail.html
+++ b/apartments/templates/apartments/detail.html
@@ -1,10 +1,29 @@
-<h1>{{ apartment.apartment_id }}</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+  </head>
+  <body>
+<h1>Это страница с детальной информацией о квартире: {{ apartment.pk }}</h1>
 <ul>
-    {{ 'Phone:' apartment.phone }}
-    {{ 'About:' apartment.about }}
-    {{ 'URL:' apartment.apartment_url }}
-    {{ 'owner:' apartment.owner }}
-    {{ 'apartment_name:' apartment.apartment_name }}
-    {{ 'About:' apartment.apartment_id }}
-    {{ 'title:' apartment.title }}
+    <b>Номер телефона: </b>{{ apartment.phone }}<br>
+    <b>Информация о квартире: </b>{{ apartment.about }}<br>
+    <b>URL: </b>{{ apartment.apartment_url }}<br>
+    <b>Информация о владельце: </b>{{ apartment.owner }}<br>
+    <b>Заглавная информация: </b>{{ apartment.apartment_name }}<br>
+    <b>Заголовок: </b>{{ apartment.title }}<br>
 </ul>
+
+
+  <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+
+  </body>
+</html>
